<resources>
    <string name="app_name">Article Reader</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eternal_emptiness">eternal emptiness</string>
    <string name="MalformedURL">MalformedURLException</string>
    <string name="IllegalArgument">IllegalArgumentException</string>
    <string name="FeedException">FeedException</string>
    <string name="IOException">IOException</string>
    <string name="title">Title</string>
    <string name="example_url">https://www.example.com</string>
    <string name="add_feed">Add Feed</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_feed">Delete feed?</string>
    <string name="delete">DELETE</string>
    <string name="default_feed_url">https://www.viralpatel.net/feed</string>
    <string name="default_feed_title">Android Devs</string>
    <string name="default_feed_url2">https://www.reddit.com/r/stories.rss</string>
    <string name="default_feed_title2">Reddit Stories</string>
    <string name="yikes">yikes</string>
    <string name="loading">loading ...</string>
    <string name="open_link">Open Link</string>
    <string name="share">Share</string>
    <string name="config_feeds">Config Feeds</string>
    <string name="refresh_feeds">Refresh Feeds</string>
    <string name="reset_feeds">Reset Feeds</string>
    <string name="add_feeds">Add Feeds</string>
    <string name="edit_feed">Edit Feed</string>
    <string name="refresh_or_add_feeds">Hello new user. There are no downloaded articles yet. Start by refreshing.</string>
    <string name="is_not_a_valid_url">is not a valid url</string>
    <string name="toggle_night_mode">Toggle Night Mode</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="reset">RESET</string>
    <string name="no_article_selected">No article selected</string>
    <string name="read_in_fullscreen">Read in fullscreen</string>
    <string name="cancel_sync">Cancel Sync</string>
    <string name="synchronization_canceled">synchronization canceled</string>
    <string name="exit_fullscreen">Exit fullscreen</string>
    <string name="notification_channel_name">Article Reader Channel</string>
    <string name="notification_title">New articles!</string>
    <string name="hide">Hide</string>
    <string name="do_not_hide">Don\'t Hide</string>
    <string name="keep_old_articles">Keep old articles</string>
    <string name="set_update_interval">Set Update Interval</string>
    <string name="ok">OK</string>
    <string name="interval_in_minutes">interval in minutes</string>
</resources>
