<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addFeedItem"
        android:title="@string/add_feeds"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_black_24dp" />
    <item
        android:id="@+id/resetFeedsItem"
        android:title="@string/reset_feeds"
        app:showAsAction="never"
        android:icon="@drawable/ic_toys_black_24dp" />

    <item
        android:id="@+id/cancelSyncItem"
        android:title="@string/cancel_sync"
        app:showAsAction="never"
        android:icon="@drawable/ic_block_black_24dp" />

    <item
        android:id="@+id/setTimerItem"
        android:title="@string/set_update_interval"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_timer_24" />
</menu>